--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   <span class="nd">@Test</span>
   <span class="nd">@LDAP</span><span class="o">(</span><span class="n">ldif</span> <span class="o">=</span> <span class="s">"/path/to/file.ldif"</span><span class="o">)</span>
   <span class="kd">public</span> <span class="kt">void</span> <span class="nf">testLdapMethod</span><span class="o">(){</span>
-    <span class="n">LdapContext</span> <span class="n">context</span> <span class="o">=</span> <span class="n">ldapUnit</span><span class="o">.</span><span class="na">createLdapContext</span><span class="o">();</span>
+    <span class="n">LdapContext</span> <span class="n">context</span> <span class="o">=</span> <span class="n">rule</span><span class="o">.</span><span class="na">createLdapContext</span><span class="o">();</span>
   <span class="o">}</span>
 
   <span class="nd">@Rule</span>
-  <span class="kd">public</span> <span class="n">LDAPUnit</span> <span class="n">ldapUnit</span> <span class="o">=</span> <span class="k">new</span> <span class="nf">LDAPUnit</span><span class="o">();</span>
+  <span class="kd">public</span> <span class="n">LDAPRule</span> <span class="n">rule</span> <span class="o">=</span> <span class="k">new</span> <span class="nf">LDAPRule</span><span class="o">();</span>
 <span class="o">}</span>
 </pre></div>
 
